--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.3"
+    "autoprefixer": "^10.4.16",
+    "nuxt": "^3.7.3",
+    "postcss": "^8.4.30",
+    "sass": "^1.68.0",
+    "tailwindcss": "^3.3.3"
   }
 }
