--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "postcss": "^8.4.30",
     "sass": "^1.68.0",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "swiper": "^10.3.1"
   }
 }
